  to the corresponding bound
- new parameter "reading/lpreader/linearize-and-constraints" to allow and constraints to be linearized when printing in
  LP format
- new parameter "reading/lpreader/aggrlinearization-ands" to enable/disable the printing of the weak or strict
  relaxation of and constraints in LP format

core:
- added presolve.{c,h} which should be used for all preprocessing mechanisms executed from within SCIP, corresponding to
  solve.{c,h}, and also for presprocessing methods which can be called from different plugins or from the core to avoid
  code doubling
- the main output routine of message.c (bufferMessage - now handleMessage) has been rewritten: it now does not need
  a copy of the string to be output anymore, which makes the code much simpler (and also faster); it is passed a
  function pointer to the output function and uses it to directly output the (buffered) messages
- changed all calls to SCIPaddCut() to take infeasibility parameter


SCIP version 3.0.2
==================

fixed bugs:
- fixed assert in solve.c with branched status and LP reached the objective limit
- fixed bug in cons_bounddisjunction with satisfied literal of multi-aggregated variable
- fixed bug in upgrade method of cons_soc
- fixed bug in heur_oneopt.c and heur_clique.c which was caused by side-effects when calling SCIPconstructLP(); when
  adding new variables in this method (e.g. adding new variables needed for a relaxation), this changes the variables
  array of SCIP
- fixed issue with negated variables in cons_xor.c
- fixed issues with ungraceful termination when encountering unsupported expression operands in AMPL interface
- fixed bug in cons_xor.c calling method on null pointer row
- fixed bug in cons_abspower.c handling infinity values in propagation
- fixed bug in parsing bounds from CIP-files
- fixed problem that diving did not save status for infeasible LPs
- fixed several bugs in propagation of cons_xor: need to take integral variables into account