@@ -154,6 +154,10 @@ parameters:
   LP format
 - new parameter "reading/lpreader/aggrlinearization-ands" to enable/disable the printing of the weak or strict
   relaxation of and constraints in LP format
+- new parameter "reading/mpsreader/linearize-and-constraints" to allow and constraints to be linearized when printing in
+  MPS format
+- new parameter "reading/mpsreader/aggrlinearization-ands" to enable/disable the printing of the weak or strict
+  relaxation of and constraints in MPS format
 
 core:
 - added presolve.{c,h} which should be used for all preprocessing mechanisms executed from within SCIP, corresponding to
